; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/miniupnpc/extr_portlistingparse.c_endelt.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/miniupnpc/extr_portlistingparse.c_endelt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.PortMappingParserData = type { i32 }

@PortMappingEltNone = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i32)* @endelt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @endelt(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.PortMappingParserData*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.PortMappingParserData*
  store %struct.PortMappingParserData* %9, %struct.PortMappingParserData** %7, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @PortMappingEltNone, align 4
  %13 = load %struct.PortMappingParserData*, %struct.PortMappingParserData** %7, align 8
  %14 = getelementptr inbounds %struct.PortMappingParserData, %struct.PortMappingParserData* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
